upload-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: upload
  namespace: monitoring
spec:
  replicas: 1
  selector:
    matchLabels:
      app: upload
  template:
    metadata:
      labels:
        app: upload
    spec:
      containers:
        - name: upload
          image: jaydipsatani/upload-service:latest
          ports:
            - containerPort: 8001
          readinessProbe:
            httpGet:
              path: /metrics
              port: 8001
            initialDelaySeconds: 5
            periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: upload
  namespace: monitoring
spec:
  type: ClusterIP
  ports:
    - port: 8001
      targetPort: 8001
  selector:
    app: upload
